# solana-stablecoin-standard

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  config.ts  index.ts  logger.ts  solana.ts  store.ts  types.ts
backend/src/middleware/: auth.ts  error-handler.ts
backend/src/routes/: compliance.ts  health.ts  mint.ts  token.ts  webhooks.ts
backend/src/services/: compliance.ts  event-listener.ts  mint-burn.ts  webhook.ts
backend/tests/: compliance.test.ts  health.test.ts  helpers.ts  mint.test.ts  store.test.ts  token.test.ts  webhook.test.ts
cli/: README.md  package-lock.json  package.json
cli/src/: config.ts  index.ts  output.ts  solana-helpers.ts
cli/src/stablecoin/: blacklist.ts  deploy.ts  operations.ts
cli/tests/: config.test.ts  operations.test.ts
demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.tsx  ConfigContext.tsx  api.ts  index.css  main.tsx  solana.ts
demo/src/components/: Accounts.tsx  AuditLog.tsx  Compliance.tsx  Dashboard.tsx  Feedback.tsx  MintBurn.tsx  Settings.tsx  Webhooks.tsx
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md  SSS-SPEC.md
programs/sss-common/: Cargo.toml
programs/sss-common/src/: lib.rs
programs/sss-core/: Anchor.toml  Cargo.toml  README.md  package.json
programs/sss-core/programs/sss_core/: Cargo.toml
programs/sss-core/programs/sss_core/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-core/programs/sss_core/src/instructions/: attest.rs  authority.rs  burn.rs  compliance.rs  freeze.rs  initialize.rs  metadata.rs  mint.rs  mod.rs  pause.rs  quota.rs  roles.rs  seize.rs  view.rs
programs/sss-core/tests/: fuzz-invariants.ts  sss-core.ts
sdk/: README.md
sdk/src/: compliance.ts  core.ts  index.ts  stablecoin.ts  types.ts
tests-litesvm/: Cargo.toml  README.md
tests-litesvm/src/: lib.rs
tests-litesvm/tests/: blacklist_hook.rs  sss_core.rs
transfer_hooks/blacklist/: Anchor.toml  README.md  package-lock.json  package.json
transfer_hooks/blacklist/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
transfer_hooks/blacklist/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1773414309103311  MANIFEST-000021
transfer_hooks/blacklist/migrations/: deploy.ts
transfer_hooks/blacklist/programs/blacklist/: Cargo.toml
transfer_hooks/blacklist/programs/blacklist/src/: lib.rs
transfer_hooks/blacklist/programs/blacklist_hook/: Cargo.toml
transfer_hooks/blacklist/programs/blacklist_hook/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
transfer_hooks/blacklist/programs/blacklist_hook/src/instructions/: admin.rs  blacklist.rs  initialize.rs  mod.rs  pause.rs  transfer_hook.rs
transfer_hooks/blacklist/tests/: blacklist-hook.ts  blacklist.ts
