[package]
name = "sss-litesvm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2"
solana-program = "2.2"
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }
sha2 = "0.10"
rand = "0.8"

[[test]]
name = "sss_core_litesvm"
path = "tests/sss_core.rs"

[[test]]
name = "blacklist_hook_litesvm"
path = "tests/blacklist_hook.rs"
