[package]
name = "sss-common"
version = "0.1.0"
description = "Shared constants, seeds, role types, and account structs for the Solana Stablecoin Standard"
edition = "2021"
publish = false

[lib]
name = "sss_common"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
