[package]
name = "sss-core"
version = "0.1.0"
description = "Solana Stablecoin Standard — Core Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_core"

[features]
default = ["compliance", "quotas", "supply-cap"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
compliance = []
quotas = []
supply-cap = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5"
solana-security-txt = "1.1.2"
sss-common = { path = "../../../sss-common" }
