[package]
name = "blacklist_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blacklist_hook"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "sss-common/idl-build"]

[profile.release]
overflow-checks = true


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
sss-common = { path = "../../../../programs/sss-common" }

# Keep these on the same line
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.0"

# Important: no-entrypoint avoids allocator/entrypoint conflicts
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
solana-security-txt = "1.1.2"